is/workplace/bookstack/07-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  namespace: intranet
  labels:
    app: bookstack
spec:
  selector:
    app: bookstack
  ports:
    - port: 80
      targetPort: 80
